[gd_scene load_steps=4 format=3 uid="uid://vvn8fgobtq5o"]

[ext_resource type="Script" path="res://Scenes/Lobby/hostView.gd" id="1_a783e"]
[ext_resource type="Theme" uid="uid://ixv6thuip0t" path="res://Graphics/Themes/deleteTheme.tres" id="2_2qecq"]
[ext_resource type="Theme" uid="uid://41ggext22ekn" path="res://Graphics/Themes/primaryTheme.tres" id="2_wkbmb"]

[node name="HostView" type="Node2D"]
script = ExtResource("1_a783e")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 439.0
offset_top = 5.0
offset_right = 656.0
offset_bottom = 68.0
theme = ExtResource("2_wkbmb")
text = "Host View
"

[node name="IDLabel" type="Label" parent="."]
offset_left = 527.0
offset_top = 61.0
offset_right = 565.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0.659793, 0.645736, 0.990409, 1)
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 964.0
offset_top = 548.0
offset_right = 1092.0
offset_bottom = 587.0
text = "Start"

[node name="ExitButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 23.0
offset_right = 208.0
offset_bottom = 60.0
theme = ExtResource("2_2qecq")
text = "Exit"

[node name="Panel" type="Panel" parent="."]
offset_left = 33.0
offset_top = 102.0
offset_right = 368.0
offset_bottom = 622.0

[node name="ListTitle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 124.0
offset_top = 17.0
offset_right = 201.0
offset_bottom = 40.0
text = "Playerlist:"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 59.0
offset_right = 336.0
offset_bottom = 99.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.659793, 0.645736, 0.990409, 1)
text = "aaaa"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
